--- a/source/_posts/深入了解函数.md
+++ b/source/_posts/深入了解函数.md
@@ -2,9 +2,9 @@
 title: 深入了解函数
 date: 2019-02-20 20:50:53
 categories: 
-- js
+- JS
 tags:
-- js
+- JS
 ---
 
 #### 函数声明
@@ -275,11 +275,62 @@ function f(){
     console.log(arguments)
 }
 
-f.call() //window
+f.call() //window (chrome是Window) ,[]
 f.call({name:'a'}) //{name:'a'} ,[]
 f.call({name:'a'},1) //{name:'a'},[1]
 f.call({name:'a'},1,2) //{name:'a',[1,2]}
 ```
+ 
+##### this是函数与对象的羁绊
 
+函数调用的时候,this只看调用时前面的对象是什么,不看定义时的对象,是独立存在的!
+this是调用时第一个隐藏参数.
+如
+``` bash
+var name = window
+var person = {
+    name:'roxas',
+    sayHi:function(){
+        console.log('I am' + this.name)
+    }
+}
 
+person.sayHi() //I am roxas
+//相当于perosn.sayHi.call(peroson)
+
+var fn = person.sayHi
+fn() //I am window
+//相当于peroson.sayHi.call()
+```
+
+#### call/apply
+
+fn.call(_this,p1,p2)是函数的正常调用方式.
+当你不确定参数的个数时,就使用apply.
+fn.apply(_this,params)
+
+``` bash
+假设数组的长度不确定
+var arr = [1,2,3,4,5,....]
+function sum(){
+    var n = 0;
+    for(var i = 0;i< arguments.length;i++){
+        n+= arguments[i]
+    }
+}
+
+sum.call(undefined,arr[0],arr[1],....)
+这时候无法用call,所以要用apply
+sum.apply(undefined,arr)
+```
+
+#### bind
+
+ call和appy都是直接调用函数,而bind则是返回一个新函数.
+ 但是并没有调用,这个函数调用时会call原来的函数,call的参数是bind传入的参数.
+ 也就是说,bind的函数的this是bind参入的第一个参数.
+
+#### 柯里化
+
+#### 高阶函数
 
