--- a/source/_posts/深入了解函数.md
+++ b/source/_posts/深入了解函数.md
@@ -334,3 +334,26 @@ sum.apply(undefined,arr)
 
 #### 高阶函数
 
+#### 回调
+
+#### 构造函数
+
+#### 箭头函数
+
+与普通函数区别
+
+1. this是上下文的this
+2. 不能指定this,call()无效
+
+``` bash
+function fn(){
+    this
+    function fn2(){
+        this //通过调用确定
+    }
+    var fn3 = ()=>{
+        this //一定是函数内的this
+    }
+}
+
+```
