--- a/source/_posts/2019-4-9-2019-4-14笔记.md
+++ b/source/_posts/2019-4-9-2019-4-14笔记.md
@@ -2,7 +2,9 @@
 title: 2019/4/9-2019/4/14笔记
 date: 2019-04-09 15:49:19
 categories:
+- 笔记
 tags:
+- 笔记
 ---
 
 #### 1. 自动化测试
@@ -227,3 +229,19 @@ npx parcel build index.js --no-cache --no-minify
 #### 5. 使用npm link
 
 由于每次更新都需要更改package.json里的版本,然后npm publish,所以我们可以用本地调试,在项目目录使用npm link,在所用目录运行npm link xxx.
+
+#### 6. 书写README
+
+shields.io生成图标
+
+#### 7. 安装git open
+
+```  bash
+npm i -g git-open
+```
+
+#### 8. git会到之前版本
+
+``` bash
+git reset --hard xxx
+```
