--- a/source/_posts/2019-4-9-2019-4-14笔记.md
+++ b/source/_posts/2019-4-9-2019-4-14笔记.md
@@ -1,10 +1,8 @@
 ---
-title: 2019/4/9-2019/4/14笔记
+title: 自动化测试&发布npm包
 date: 2019-04-09 15:49:19
 categories:
-- 笔记
 tags:
-- 笔记
 ---
 
 #### 1. 自动化测试
