--- a/source/_posts/函数节流与防抖.md
+++ b/source/_posts/函数节流与防抖.md
@@ -8,11 +8,11 @@ tags:
 
 ##### 函数防抖的定义
 
-当事件触发n秒后,才会回调函数,假如n秒内再次触发事件,则时间重新计算.
+事件触发,等待一段时间,假如事件在时间内不再触发,则调用函数,假如触发重新计算时间.
 
 ##### 原理
 
-定义 debounce 函数,传入回调函数与节流时间,若出触发事件,生成定时器,当在节流时间内再次触发时间,则清空定时器,生成一个新的定时器.直到节流时间内没有新时间触发,执行回调.
+设置定时器为null,假如定时器存在则清空,再设置新的定时器,事件结束后触发函数,并清空定时器.
 
 ##### 代码
 
@@ -22,10 +22,10 @@ function debounce(fn,wait){
     return ()=>{
          if(timer){
              clearTimeout(timer);
-             timer = null
          }
          timer = setTimeout(()=>{
              fn()
+            timer = null
          },wait)
     }
 }
@@ -41,11 +41,13 @@ function debounce(fn,wait){
 
 ##### 函数节流的定义
 
-在一个单位时间内,无论事件触发多少次,都只能回调一次函数
+一段时间内只能调用一次函数(技能CD)
 
 ##### 原理
 
 使用时间戳来判断是否到回调执行时间,记录上次执行时间,当当前时间与上次执行时间间隔大于时间戳则执行回调.
+
+设置状态doing,触发事件,状态变为true,一段时间后变为false.只有状态为false才回调函数.
 ##### 代码
 
 ```bash
@@ -61,6 +63,19 @@ function throttle(fn,gapTime){
     }
 }
 
+//实现方式2
+function throttle(fn,gapTime){
+    let doing = false;
+    return ()=>{
+        if(doing === false){
+        fn()
+        doing = true
+        setTimeout(()=>{
+            doing = false
+        },gapTime)
+    }
+  }
+}
 ```
 
 ##### 应用场景
