--- a/source/_posts/密码强度.md
+++ b/source/_posts/密码强度.md
@@ -1,7 +1,10 @@
 ---
 title: 密码强度的实现
 date: 2019-01-11 13:12:52
+categories:
+- 业务代码
 tags:
+- 业务代码
 ---
 
 ### 密码强度
@@ -19,22 +22,22 @@ tags:
 
 ##### 用以下形式表示四种字符的类型.
 
-|字符类型|二进制数字|ASCII|
-|---------|:--------:|:-----|
-|数字     |0001       |48~57 |
-|小写字母 |0010       |97~122|
-|大写字母 |0100       |65~90 |
-|特殊字符 |1000       |ohter |
+| 字符类型 | 二进制数字 | ASCII  |
+|----------|:----------:|:-------|
+| 数字     |    0001    | 48~57  |
+| 小写字母 |    0010    | 97~122 |
+| 大写字母 |    0100    | 65~90  |
+| 特殊字符 |    1000    | ohter  |
 
 ##### 例子:
 
-|字符类型|二进制数字|十进制|
-|---------|:-----------------:|:-------|
-|1234     |0001/0001/0001/0001|0001->1 |
-|abcd     |0010/0010/0010/0010|0010->2 |
-|ABCD     |0100/0100/0100/0100|0100->4 |
-|!@#$     |1000/1000/1000/1000|1000->8 |
-|Aa1!     |0100/0010/0001/1000|1111->15|
+| 字符类型 |     二进制数字      | 十进制   |
+|----------|:-------------------:|:---------|
+| 1234     | 0001/0001/0001/0001 | 0001->1  |
+| abcd     | 0010/0010/0010/0010 | 0010->2  |
+| ABCD     | 0100/0100/0100/0100 | 0100->4  |
+| !@#$     | 1000/1000/1000/1000 | 1000->8  |
+| Aa1!     | 0100/0010/0001/1000 | 1111->15 |
 
 即:把密码变成4位二进制数,1的个数越多,密码强度越大.
 
