--- a/source/_posts/面试题.md
+++ b/source/_posts/面试题.md
@@ -1,5 +1,5 @@
 ---
-title: 2019-07-28面试题
+title: 面试题
 date: 2019-07-28 12:28:45
 categories:
 - 面试题
@@ -38,6 +38,8 @@ canvas video audio
 
 ### CSS
 1. 盒模型
+content-box 内容区宽度
+border-box content+padding+border
 
 2. 实现垂直居中
     1. table自带功能
@@ -130,10 +132,16 @@ canvas video audio
 3. flex属性
 
 4. BFC是什么
-块级格式化上下文
-overflow:hidden制造bfc,浮动元素会被包裹起来
+块级格式化上下文，常见的例子有：
+ 1. overflow:hidden
+ 2. 浮动元素
+ 3. 绝对定位元素
+ 4. inline-block
+ 5. flex或者inline-flex
 
-说例子
+解决了什么问题：
+ 1. 清除浮动
+ 2. 防止margin合并
 
 5. CSS选择器优先级
     1. 越具体优先级越高
@@ -248,6 +256,7 @@ function ajax(method,data,url){
 
     ```bash
     1. fn()
+
         this => window
     2. obj.fn()
         this => obj
@@ -265,12 +274,36 @@ function ajax(method,data,url){
 
 6. 闭包/立即执行函数
 
+    声名一个匿名函数，然后立即执行它。在Es6之前，只能通过它来[创建局部作用域]。
+    闭包：
+    ```bash
+    const add2 = function(){
+        var count
+        return function add(){
+            count +1 = 1 //访问了外部变量的函数
+        }
+    }()
+    ```
+    闭包优点： 
+    1. 避免污染全局环境。
+    2. 提供对局部变量的间接访问。
+    3. 维持变量，使其不被垃圾回收。
+
 7. jsonp/cors/跨域
 
     jsonp,动态创建script标签,src指向请求地址,把callback函数名当做参数传给服务器,服务器把数据包装在callback内,传回来,然后script执行callback.
 
     cors:跨域资源共享
-
+    1. 对于简单请求，乙站点在响应头添加Access-Control-Allow-Origin:http：//甲站点
+    2. 对于复杂请求，如POST，乙站点需要：
+        1. 响应OPTIONS请求，响应中添加如下的响应头
+        ```bash
+        Access-Control-Allow-Origin:http：//甲站点
+        Access-Control-Allow-Mthods:POST,GET,OPTIONS
+        Access-Control-Allow-Headers:Contet-type
+        ```
+        2. 响应POST请求，在响应中添加Access-Control-Allow-Origin头
+    3. 如果需要附带Cookie，JS中需要在AJAX里设置xhr.withCredentials = true
 
 
 8. async await 捕获异常
@@ -284,7 +317,7 @@ async function fn(){
 }
 ```
 
-9. 深拷贝
+1. 深拷贝
 
     1. 递归
     2. 判断类型
@@ -353,6 +386,7 @@ a.say()
 ```
 
 es6
+
 ```bash
 class Animal{
     constructor(name){
@@ -374,11 +408,55 @@ class Dog extends Animal {
 }
 ```
 
-12. 去重
+JS的new做了什么
+ 1. 创建临时对象/新对象
+ 2. 绑定原型
+ 3. 指定this = 临时对象
+ 4. 执行构造函数
+ 5. 返回临时对象
 
-    1. hash
+12. 去重
+    1. hash（计数排序的思路）
+        ```bash
+        var uniq = function(a){
+            var map = {}
+            for(let i =0;i<a.length;i++){
+                let number = a[i]
+                if(number === undefined){continue}
+                if(number in map){//已重复
+                    continue
+                }
+                map[number] = true //map里第一次出现
+            }
+            const result = []
+            for(let key in map){
+                result.push(key)
+            }
+            return result
+        }
+        ```
+        缺点：数字只能是字符串，同时有数字跟字符串无法分出（'1',1）
+
     2. set
+        ```bash
+        Array.form(new Set(a))
+        ```
     3. Weekmap
+        ```bash
+        var uniq = function(a){
+            var map = new Map()
+            for(let i =0;i<a.length;i++){
+                let number = a[i]
+                if(number === undefined){continue}
+                if(map.has(number)){//已重复
+                    continue
+                }
+              map.set(number,true) //map里第一次出现
+            }
+           return [...map.keys()]
+        }
+        ```
+        缺点：兼容性差了一些
 
 13. 手写Promise
 
@@ -444,10 +522,12 @@ class Dog extends Animal {
 HTTP status cat
 
 2. HTTP缓存有哪几种
+    http1.1：
 
+    Cache-control: max-age 多少秒内过期 是相对时间 无请求 在本地
     Etag:MD5 在服务器 有请求 304
+    http1.0：
     Expire:日期 什么时候过期 Bug:本地时间用户可以调
-    Cache-control: max-age 多少秒内过期 是相对时间 无请求 早本地
 
 3. GET 和 POST
 
@@ -458,19 +538,39 @@ HTTP status cat
     3. GET 参数放在URL POST 放在消息体
     4. GET  只需要一个报文 POST 需要两个以上
     5. GET 幂等(不改变数据) POST 不幂等(改变数据库)
-
+    6. GET结果会被缓存，POST结果不会被缓存
     对: 只语义上的区别 get 获取数据 post 提交数据
 
 3. Cookie Session Localstrage Sessionstrage 区别
+   1. Cookie与Localstrage，cookie会被发送到服务器，4k，Localstrage不带请求，在本地，5M
+   2. Localstrage与Sessionstrage，前者不会过期，后者会话结束后过期
+   3. Cookie与Session，cookie存在浏览器，Session存在服务器，Session基于Cooike实现，具体做法就是把SessionId存在Cookie里
 
 4. HTTP2 HTTP1区别
+    1. HTTP/2使用了二进制传输，而且将head和body分成帧来传输；HTTP/1.1是字符串传输。
+    2. HTTP/2使用多路复用，HTTP/1.1不支持。多路复用简单来说就是一个TCP连接从单车道（不是单行道）变成了几百个双向通行的车道。
+    3. HTTP/2可以压缩header，但是HTTP/1.1不行。
+    4. HTTP/2支持服务器推送，但是HTTP/1.1不行。
 
-    多路复用
+5. HTTP和HTTPS区别
+    1. HTTP是明文传输的，不安全；HTTPS是加密传输的，非常安全。
+    2. HTTP使用80端口，HTTPS使用443端口。
+    3. HTTP较快，HTTPS较慢。
+    4. HTPS的证书一般需要购买，HTTP不需要证书。
 
-    服务器端推送
-
-    强制开启HTTPS
-
+6. TCP三次握手和四次挥手
+   建立TCP连接时sever和client会经历三次握手
+   1. 浏览器向服务器发送TCP数据,SYN(X)//请求数据
+   2. 服务器向浏览器发送TCP数据,ACK(X+1),SYN(y)//表示同意
+   3. 浏览器向服务器发送TCP数据,ACK(y)//表示同意
+  
+   关闭TCP连接时sever和client会经历四次挥手
+   4. 浏览器向服务器发送TCP数据,FIN(X)//表示已完成
+   5. 服务器向浏览器发送TCP数据,ACK(X+1)/表示同意
+   6. 服务器向浏览器发送TCP数据,FIN(y)/表示已完成
+   7. 浏览器向服务器发送TCP数据,ACK(y)//表示同意
+   
+    为什么2，3步骤不合并？因为2，3中间服务器很可能还有数据要发送，不能提前发送FIN
 ### Vue
 
 1. watch computed 区别
@@ -502,10 +602,13 @@ HTTP status cat
 
     ...map
 
-5. vue数据响应式
-
-    Object.defineProperty 把所有属性转化为getter/setter
-    但是不能检测数据添加删除,要用vm.$set
+5. vue2如何实现双向绑定的？
+    1. v-model是v-bind：value和v-on:input的语法糖
+        a: v-bind:value实现了data=>ui的单向绑定 
+        b： v-on:input实现了ui=>data的单向绑定
+    2. 如何实现
+        a： Object.defineProperty 给data创建getter/setter，用于监听data的改变，data一变就会安排改变ui
+        b：后者通过template compiler给DOM添加事件监听，DOM input的值改变了就会去修改data
 
 6. vue.set
 
@@ -572,8 +675,29 @@ axios.interceptors.response.ues(function(response){
 })
 ```
 
+### vue3
+1. vue3为什么使用proxy？
+ 1. 弥补Object.defineProperty的两个不足
+    a：动态创建的data属性需要Vue.set来赋值，vue3用了proxy就不需要了。
+    b：基于性能考虑，vue2篡改数组的7个API（push等），vue3用了proxy就不需要了。
+ 2. defineProperty需要提前递归遍历data做到响应式，而proxy可以在真正用到深层数据的时候再做响应式（惰性）
 
+2. vue3为什么使用composition API？
+   1. composition api比mixins、高阶组件、extends、Renderless Components等更好，原因有三：
+    a:模板中的数据来源不清晰。
+    b：命名空间冲突。
+    c：性能
 
+    2. 更适合TypeScript
+
+3. vue3对比vue2座了哪些改动？
+   1. createApp()代替了new Vue()
+   2. v-model代替了以前的v-model和sync
+   3. 根元素可以不止一个元素了
+   4. 新增teleport传送门
+   5. destory被改名为unmounted了
+   6. ref属性支持函数了
+   
 ### Webpack
 
 1. 用过什么loader plugin
