--- a/source/_posts/面试题.md
+++ b/source/_posts/面试题.md
@@ -12,29 +12,29 @@ tags:
 1. html语义化
 
 2. meta viewport
-github head
-``` bash
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
-```
+    github head
+    ``` bash
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
+    ```
 3. 用过什么html5标签
 
-header footer main article
-canvas video audio
-搜索mdn
+    header footer main article
+    canvas video audio
+    搜索mdn
 
 4. H5是什么?
-移动端页面
-```bash
-1. 页面素材预加载,createJS的preloadJS
-2. 音乐加载播放技术,createJS的soundJS或H5的audio
-3. 可滑动页面,swiper.js
-4. 可涂抹擦除,canvas叠层
-5. 动态文字和图片,css3动画与js动画
-6. 填报报名 html表单
-7. 支持分享自定义的文案和图片 微信jssdk
+    移动端页面
+    ```bash
+    1. 页面素材预加载,createJS的preloadJS
+    2. 音乐加载播放技术,createJS的soundJS或H5的audio
+    3. 可滑动页面,swiper.js
+    4. 可涂抹擦除,canvas叠层
+    5. 动态文字和图片,css3动画与js动画
+    6. 填报报名 html表单
+    7. 支持分享自定义的文案和图片 微信jssdk
 
-炫酷效果:egret/cocos2d/
-```
+    炫酷效果:egret/cocos2d/
+    ```
 
 ### CSS
 1. 盒模型
@@ -132,16 +132,16 @@ border-box content+padding+border
 3. flex属性
 
 4. BFC是什么
-块级格式化上下文，常见的例子有：
- 1. overflow:hidden
- 2. 浮动元素
- 3. 绝对定位元素
- 4. inline-block
- 5. flex或者inline-flex
+    块级格式化上下文，常见的例子有：
+    1. overflow:hidden
+    2. 浮动元素
+    3. 绝对定位元素
+    4. inline-block
+    5. flex或者inline-flex
 
-解决了什么问题：
- 1. 清除浮动
- 2. 防止margin合并
+    解决了什么问题：
+    1. 清除浮动
+    2. 防止margin合并
 
 5. CSS选择器优先级
     1. 越具体优先级越高
@@ -149,108 +149,108 @@ border-box content+padding+border
     3. importan!最高 少用
 
 6. 清除浮动
-.clearfix{
-    content:'';
-    display:block;
-    clear:both;
-}
-加到容器上,里面子元素浮动被清除.
+    .clearfix{
+        content:'';
+        display:block;
+        clear:both;
+    }
+    加到容器上,里面子元素浮动被清除.
 
 ###  JS
 
 1. ES6属性
 
 2. Promise.all Promise.race
-```bash
-//Promise
+    ```bash
+    //Promise
 
-function xxx(){
-    return new Promise(function(resolve,reject){
-        setTimeout(()=>{
-            if(xxx){
-                resolve('data')
-            }else{
-                reject(new Error('error'))
-            }
-        })
+    function xxx(){
+        return new Promise(function(resolve,reject){
+            setTimeout(()=>{
+                if(xxx){
+                    resolve('data')
+                }else{
+                    reject(new Error('error'))
+                }
+            })
+        }
     }
-}
 
-//Promise.all([fn,fn2,fn3]).then(res1,res2,res3) 
-//Promise.race([fn,fn2,fn3]).then(res)
-```
+    //Promise.all([fn,fn2,fn3]).then(res1,res2,res3) 
+    //Promise.race([fn,fn2,fn3]).then(res)
+    ```
 
 3. 函数防抖,函数节流
-防抖:事件触发,假如事件在一定时间内不再触发,则调用函数
+    防抖:事件触发,假如事件在一定时间内不再触发,则调用函数
 
-```bash
-function 防抖(fn,time){
-    let timer = null;
-    return ()=>{
-        if(timer){
-            clearTimeout()
-        }
-        timer = setTimeout(()=>{
-            fn()
-            timer = null
-        },time)
-    }
-}
-```
-
-节流:一段时间内只能调用一次函数
-
-```bash
-function 节流(fn, time) {
-    let doing = false;
-    return () => {
-        if (doing === false) {
-            doing = true;
-            fn()
-            setTimeout(() => {
-                doing = false;
-            }, time)
+    ```bash
+    function 防抖(fn,time){
+        let timer = null;
+        return ()=>{
+            if(timer){
+                clearTimeout()
+            }
+            timer = setTimeout(()=>{
+                fn()
+                timer = null
+            },time)
         }
     }
-}
-```
+    ```
+
+    节流:一段时间内只能调用一次函数
+
+    ```bash
+    function 节流(fn, time) {
+        let doing = false;
+        return () => {
+            if (doing === false) {
+                doing = true;
+                fn()
+                setTimeout(() => {
+                    doing = false;
+                }, time)
+            }
+        }
+    }
+    ```
 
 4. 手写ajax
 
-```bash
-var request = new XMLHttpRequest();
-request.open('GET','url')
-request.onreadystatechange = function(){
-    if(request.readyState === 4){
-        if(request.status >= 200 && request.status < 300 || request.status === 304){
-            console.log(request.responseText)
-        }else{
-            console.log('error')
-        }
-    }
-}
-request.send()
-```
-
-用promise写ajax
-```bash
-function ajax(method,data,url){
-    return new Promise(function(resolve,reject){
-        let request = new XMLHttpRequest()
-        request.open(method,url)
-        request.onreadystatechange = function(){
-            if(request.readyState === 4){
-                if(request.status >= 200 && request.status < 300 || request.status === 304){
-                    resolve(request.responseText)
-                }else{
-                    reject('error')
-                }
+    ```bash
+    var request = new XMLHttpRequest();
+    request.open('GET','url')
+    request.onreadystatechange = function(){
+        if(request.readyState === 4){
+            if(request.status >= 200 && request.status < 300 || request.status === 304){
+                console.log(request.responseText)
+            }else{
+                console.log('error')
             }
         }
-        request.send(data)
-    })
-}
-```
+    }
+    request.send()
+    ```
+
+    用promise写ajax
+    ```bash
+    function ajax(method,data,url){
+        return new Promise(function(resolve,reject){
+            let request = new XMLHttpRequest()
+            request.open(method,url)
+            request.onreadystatechange = function(){
+                if(request.readyState === 4){
+                    if(request.status >= 200 && request.status < 300 || request.status === 304){
+                        resolve(request.responseText)
+                    }else{
+                        reject('error')
+                    }
+                }
+            }
+            request.send(data)
+        })
+    }
+    ```
 
 5. this
 
@@ -307,113 +307,124 @@ function ajax(method,data,url){
 
 
 8. async await 捕获异常
-```bash
-async function fn(){
-    try{
-        let a = await Promise.reject('error')
-    }catch(error){
-        console.log(error)
+    ```bash
+    async function fn(){
+        try{
+            let a = await Promise.reject('error')
+        }catch(error){
+            console.log(error)
+        }
     }
-}
-```
+    ```
 
-1. 深拷贝
+9. 深拷贝
 
     1. 递归
     2. 判断类型
     3. 检测循环引用(环)
     4. 不可能拷贝 __proto__
 
-``` bash
- function clone(object){
-     var object2
-     if(! (object instanceof Object) ){
-         return object
-     }else if(object instanceof Array){
-         object2 = []
-     }else if(object instanceof Function){
-         object2 = eval(object.toString())
-     }else if(object instanceof Object){
-         object2 = {}
-     }
-     你也可以把 Array Function Object 都当做 Object 来看待，参考 https://juejin.im/post/587dab348d6d810058d87a0a
-     for(let key in object){
-         object2[key] = clone(object[key])
-     }
-     return object2
- }
-```
+    ``` bash
+    const cache = new Map()//缓存已拷贝部分
+    function clone(object){
+        if(cache.get(object)){//假如已缓存，直接返回
+            return cache.get(object)
+        }
+        let result
+        if(! (object instanceof Object) ){//基础类型直接返回
+            return object
+        }else if(object instanceof Array){
+            result = []
+        }else if(object instanceof Function){
+           result = function(){return object.apply(this,arguments)}
+        }else if(object instanceof Date){
+            result = new Date(object-0)
+        }
+        else if(object instanceof RegExp){
+            result = new RegExp(a)
+        }else{
+            result = {}
+        }
+        cache.set(object,result)//插入缓存
+        for(let key in object){
+            if(object.hasOwnProperty(key)){//非继承属性
+                result[key] = clone(object[key])
+            }
+        }
+        return result
+    }
+    ```
 
 10. 正则实现trim
-```bash
-function trim(string){
-    return string.replace(/^\s+|\s+$/g,'')
-}
-```
+    ```bash
+    function trim(string){
+        return string.replace(/^\s+|\s+$/g,'')
+    }
+    ```
 
 11. 继承
 
-es5
-```bash
-function Animal(name){
-    this.name = name
-}
-
-Animal.prototype.move = function(){
-    console.log('move')
-}
-
-function Dog(){
-    Animal.apply(this,arguments)
-    this.foot = 4
-}
-
-let f = function(){}
-f.prototype = Animal.prototype;
-Dog.prototype = new f()
-
-Dog.prototype.constructor = Dog
-
-Dog.prototype.say = function(){
-    console.log('汪汪汪')
-}
-
-let a = new Dog('aaa') //{name:'aaa',foot:4}
-a.name
-a.move()
-a.foot
-a.say()
-```
-
-es6
-
-```bash
-class Animal{
-    constructor(name){
+    es5
+    ```bash
+    function Animal(name){
         this.name = name
     }
-    move(){
+
+    Animal.prototype.move = function(){
         console.log('move')
     }
-}
 
-class Dog extends Animal {
-    constructor(name){
-        super(name)
+    function Dog(){
+        Animal.apply(this,arguments)
         this.foot = 4
     }
-    say(){
+
+    let f = function(){}
+    f.prototype = Animal.prototype;
+    Dog.prototype = new f()
+
+    Dog.prototype.constructor = Dog
+
+    Dog.prototype.say = function(){
         console.log('汪汪汪')
     }
-}
-```
 
-JS的new做了什么
- 1. 创建临时对象/新对象
- 2. 绑定原型
- 3. 指定this = 临时对象
- 4. 执行构造函数
- 5. 返回临时对象
+    let a = new Dog('aaa') //{name:'aaa',foot:4}
+    a.name
+    a.move()
+    a.foot
+    a.say()
+    ```
+
+    es6
+
+    ```bash
+    class Animal{
+        constructor(name){
+            this.name = name
+        }
+        move(){
+            console.log('move')
+        }
+    }
+
+    class Dog extends Animal {
+        constructor(name){
+            super(name)
+            this.foot = 4
+        }
+        say(){
+            console.log('汪汪汪')
+        }
+    }
+    ```
+
+    JS的new做了什么
+    1. 创建临时对象/新对象
+    2. 绑定原型
+    3. 指定this = 临时对象
+    4. 执行构造函数
+    5. 返回临时对象
 
 12. 去重
     1. hash（计数排序的思路）
@@ -459,67 +470,134 @@ JS的new做了什么
         缺点：兼容性差了一些
 
 13. 手写Promise
+    ```bash
+    class Promises2 {
+        #status = 'pending'
+        constructor(fn) {
+            this.q = []//创建一个队列
+            const resolve = (data) => {
+                this.#status = 'fulfilled'
+                const f1f2 = this.q.shift()//出列，返回第一个
+                const x = f1f2[0].call(undefined, data)
+                if (x instanceof Promise2) {
+                    x.then(data => {
+                        resolve(data)
+                    }, (reason) => {
+                        reject(reason)
+                    })
+                } else {
+                    resolve(x)
+                }
+            };
+            const reject = (reason) => {
+                this.#status = 'rejected'
+                const f1f2 = this.q.shift()
+                const x = f1f2[1].call(undefined, data)
+                if (x instanceof Promise2) {
+                    x.then(data => {
+                        resolve(data)
+                    }, (reason) => {
+                        reject(reason)
+                    })
+                } else {
+                    resolve(x)
+                }
+            }
+            fn.call(undefined, resolve, reject)
+        }
+        then(f1, f2) {
+            this.q.push([f1, f2])//入列
+        }
+    }
+    ```
+14. 手写Promise.all
+    1. 知道Promise上写而不是在原型上写
+    2. 知道all的参数（Promise数组）和返回值（新Promise对象）
+    3. 知道用数组来记录结果
+    4. 知道只要一个reject就整体reject
+       
+    ```bash
+    Promise.myAll = function (list) {
+        const results = []
+        let count = 0
+        return new Promise((resolve,reject) => {
+            list.map((promise,index) => {
+                promise.then((r) => {
+                    results[index] = r
+                    count += 1
+                    if (count === list.length) {
+                        resolve(results)
+                    }
+                },
+                    (reason) => {
+                        reject(reason)
+                    }
+                )
+            })
+        })
+    }
+    ```
+
+15. JS垃圾回收机制
+    1. 什么是垃圾
+        1. 没有引用的就是垃圾
+        2. 如果是对象互相引用，形成环也是垃圾
+    2. 如何捡垃圾
+        遍历和计数，如有引用则进行标记，最后把没有标记的删除
+    3. 前端又有其特殊性（JS进程和DOM进程）
 
 ### DOM
 
 1. 事件委托
+   好处：
+    1. 节省监听器
+    2. 动态监听
+   坏处：
+    3. 调试比较复杂，不容易缺点监听者。
 
-```bash
- ul.addEventListener('click', function(e){
-     if(e.target.tagName.toLowerCase() === 'li'){
-         fn() // 执行某个函数
-     }
- })
-```
+    ```bash
+    ul.addEventListener('click', function(e){
+        if(e.target.tagName.toLowerCase() === 'li'){
+            fn() // 执行某个函数
+        }
+    })
+    ```
 
 
 2. mouse事件写一个可拖动的div
-```bash
-.xxx {
-    border: 1px solid red;
-    width: 40px;
-    height: 40px;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
+   1. 记录鼠标按下的坐标
+   2. 记录当前拖动坐标
+   3. 移动距离=拖动坐标-拖动坐标
+   4. 元素的style.left/top+移动距离
+    ```bash
+        var position = null
+        var drag = false
+        xxx.addEventListener('mousedown',function(e){
+                drag = true;
+                position = [e.clientX,e.clientY]
+        })
+        document.addEventListener('mousemove',function(e){
+            if(!drag) return //没有移动就别拖
+                let X = e.clientX
+                let Y = e.clientY
+                let left = parseInt(xxx.style.left || 0 )
+                let top = parseInt(xxx.style.top || 0 )
+                moveX = X - position[0]
+                moveY = Y - position[1]
+                xxx.style.left = left + moveX + 'px'
+                xxx.style.top = top + moveY + 'px'
+                position = [X,Y]
+        })
+        document.addEventListener('mouseup',function(e){
+            drag = false
+        })
+    ```
 
-* {
-    margin: 0;
-    padding: 0
-}
-
- var xxx = document.querySelector('.xxx')
-    var position = null
-    var drag = false
-    xxx.addEventListener('mousedown',function(e){
-        if(e.target === xxx){
-            drag = true;
-            position = [e.clientX,e.clientY]
-        }
-    })
-    document.addEventListener('mousemove',function(e){
-        if(drag){
-            let cur_X = e.clientX
-            let cur_Y = e.clientY
-            let cur_left = parseInt(xxx.style.left || 0 )
-            let cur_top = parseInt(xxx.style.top || 0 )
-            moveX = cur_X - position[0]
-            moveY = cur_Y - position[1]
-            xxx.style.left = cur_left + moveX + 'px'
-            xxx.style.top = cur_top + moveY + 'px'
-            position = [cur_X,cur_Y]
-        }
-    })
-    document.addEventListener('mouseup',function(e){
-        drag = false
-    })
-```
 ### HTTP
 
 1. HTTP状态码
 
-HTTP status cat
+    HTTP status cat
 
 2. HTTP缓存有哪几种
     http1.1：
@@ -571,6 +649,7 @@ HTTP status cat
    7. 浏览器向服务器发送TCP数据,ACK(y)//表示同意
    
     为什么2，3步骤不合并？因为2，3中间服务器很可能还有数据要发送，不能提前发送FIN
+
 ### Vue
 
 1. watch computed 区别
@@ -701,41 +780,108 @@ axios.interceptors.response.ues(function(response){
 ### Webpack
 
 1. 用过什么loader plugin
+    1. loader 转换器
+        1. babel-loader 把 JS/TS 变成 JS
+        2. ts-loader 把 TS 变成 JS，并提示类型错误
+        3. markdown-loader 把 markdown 变成 html
+        4. html-loader 把 html 变成 JS 字符串
+        5. sass-loader 把 SASS/SCSS 变成 CSS
+        6. css-loader 把 CSS 变成 JS 字符串
+        7. style-loader 把 JS 字符串变成 style 标签
+        8. postcss-loader 把 CSS 变成更优化的 CSS
+        9. vue-loader 把单文件组件（SFC）变成 JS 模块
+        10. thread-loader 用于多进程打包
 
-    搜索
+    2. plugin 扩展器
+         1. html-webpack-plugin 用于创建 HTML 页面并自动引入 JS 和 CSS
+         2. clean-webpack-plugin 用于清理之前打包的残余文件
+         3. mini-css-extract-plugin 用于将 JS 中的 CSS 抽离成单独的 CSS 文件
+         4. SplitChunksPlugin 用于代码分包（Code Split）
+         5. DllPlugin + DllReferencePlugin 用于避免大依赖被频繁重新打包，大幅降低打
+         包时间
+         6. eslint-webpack-plugin 用于检查代码中的错误
+         7. DefinePlugin 用于在 webpack config 里添加全局变量
+         8. copy-webpack-plugin 用于拷贝静态文件到 dist
 
-    loader 转换器
+    二者的区别
+    3. loader 是文件加载器（这句废话很重要）
+        功能：能够对文件进行编译、优化、混淆（压缩）等，比如 babel-loader /
+    4. plugin 是 webpack 插件（这句废话也很重要）
+        功能：能实现更多功能，比如定义全局变量、Code Split、加速编译等
+        运行时机：在整个打包过程（以及前后）都能运行
 
-    html pug-loder markdown-loader
-    css postcss-loader scss-loader less-loader style-loader
-    js babel-loader eslint-loader
-    图片 image-loader
+2. webpack 如何解决开发时的跨域问题？
+    在开发时，我们的页面在 localhost:8080 ，JS 直接访问后端接口（如
+    https://xiedaimala.com 或 http://localhost:3000 ）会报跨域错误。
+    为了解决这个问题，可以在 webpack.config.js 中添加如下配置：
+    ```bash
+    module.exports = {
+    //...
+    devServer: {
+        proxy: {
+        '/api': {
+                target: 'http://xiedaimala.com',
+                changeOrigin: true,
+                },
+            },
+        },
+    };
+    ```
+    此时，在 JS 中请求 /api/users 就会自动被代理到
+    http://xiedaimala.com/api/users 。
+    如果希望请求中的 Origin 从 8080 修改为 xiedaimala.com，可以添加 changeOrigin:
+    true 。
+    如果要访问的是 HTTPS API，那么就需要配置 HTTPS 证书，否则会报错。
+    不过，如果在 target 下面添加 secure: false ，就可以不配置证书且忽略 HTTPS 报
+    错。
+    总之，记住常用选项就行了。
 
-    plugin 扩展器
+3. 如何实现 tree-shaking？
+   是什么
+    tree-shaking 就是让没有用到的 JS 代码不打包，以减小包的体积。
+    怎么做
+    背下文档说的这几点：
+      1. 怎么删
+            a. 使用 ES Modules 语法（即 ES6 的 import 和 export 关键字）
+            b. CommonJS 语法无法 tree-shaking（即 require 和 exports 语法）
+            c. 引入的时候只引用需要的模块
+                i. 要写 import {cloneDeep} from 'lodash-es' 因为方便 tree-shaking
+                ii. 不要写 import _ from 'lodash' 因为会导致无法 tree-shaking 无用模块
+      2. 怎么不删：在 package.json 中配置 sideEffects，防止某些文件被删掉
+            a. 比如我 import 了 x.js，而 x.js 只是添加了 window.x 属性，那么 x.js 就要放到
+            sideEffects 里
+            b. 比如所有被 import 的 CSS 都要放在 sideEffects 里
+      3. 怎么开启：在 webpack config 中将 mode 设置为 production（开发环境没必要tree-shaking）
+            a. mode: production 给 webpack 加了非常多优化
 
-    html html-webpack-plugin
-    css extract-text-plugin
-    js 
+4. 如何提高 webpack 构建速度？
+   1. 使用 DllPlugin 将不常变化的代码提前打包，并复用，如 vue、react
+   2. 使用 thread-loader 或 HappyPack（过时）进行多线程打包
+   3. 处于开发环境时，在 webpack config 中将 cache 设为 true，也可用 cacheloader（过时）
+   4. 处于生产环境时，关闭不必要的环节，比如可以关闭 source map
+   5. 网传的 HardSourceWebpackPlugin 已经一年多没更新了，谨慎使用
 
-2. loader plugin区别
-
-    loader读文件
-    plugin添加功能
-
-3. 如何按需加载代码
-
-    improt('代码路径')
-
-4. 如何提高构建速度
-    happypack 多线程打包
-    dllPlugin 
-
-5. 转义文件过大怎么办
-
-    提取公共模块
-    压缩JS,CSS,图片
-    动态加载
-
+5. webpack 与 vite 的区别是什么？
+   1. 开发环境区别
+    a. vite 自己实现 server，不对代码打包，充分利用浏览器对 <script type=module> 的支持
+        i. 假设 main.js 引入了 vue
+        ii. 该 server 会把 import { createApp } from 'vue' 改为 import {
+        createApp } from "/node_modules/.vite/vue.js" 这样浏览器就知道去哪
+        里找 vue.js 了
+    b. webpack-dev-server 常使用 babel-loader 基于内存打包，比 vite 慢很多很多很多
+        i. 该 server 会把 vue.js 的代码（递归地）打包进 main.js
+   2. 生产环境区别
+    a. vite 使用 rollup + esbuild 来打包 JS 代码
+    b. webpack 使用 babel 来打包 JS 代码，比 esbuild 慢很多很多很多
+            i. webpack 能使用 esbuild 吗？可以，你要自己配置（很麻烦）。
+   3. 文件处理时机
+    a. vite 只会在你请求某个文件的时候处理该文件
+    b. webpack 会提前打包好 main.js，等你请求的时候直接输出打包好的 JS 给你
+   目前已知 vite 的缺点有：
+   1. 热更新常常失败，原因不清楚
+   2. 有些功能 rollup 不支持，需要自己写 rollup 插件
+   3. 不支持非现代浏览器
+                  
 ### 安全
 
 XSS
@@ -775,7 +921,6 @@ a.x 是什么?
 ```
 
 ### Eventloop
-
 
 ### this
 ```bash
