--- a/source/_posts/面试题.md
+++ b/source/_posts/面试题.md
@@ -510,6 +510,7 @@ border-box content+padding+border
         }
     }
     ```
+
 14. 手写Promise.all
     1. 知道Promise上写而不是在原型上写
     2. 知道all的参数（Promise数组）和返回值（新Promise对象）
@@ -553,7 +554,7 @@ border-box content+padding+border
     1. 节省监听器
     2. 动态监听
    坏处：
-    3. 调试比较复杂，不容易缺点监听者。
+    3. 调试比较复杂，不容易发现监听者。
 
     ```bash
     ul.addEventListener('click', function(e){
@@ -769,7 +770,7 @@ axios.interceptors.response.ues(function(response){
 
     2. 更适合TypeScript
 
-3. vue3对比vue2座了哪些改动？
+3. vue3对比vue2做了哪些改动？
    1. createApp()代替了new Vue()
    2. v-model代替了以前的v-model和sync
    3. 根元素可以不止一个元素了
@@ -884,9 +885,23 @@ axios.interceptors.response.ues(function(response){
                   
 ### 安全
 
-XSS
+    XSS（跨站脚本攻击）
 
-CSRF
+
+    CSRF（跨站请求伪造）
+        防御：Token验证
+
+    区别一：
+
+    CSRF：需要用户先登录网站A，获取 cookie。
+
+    XSS：不需要登录。
+
+    区别二：（原理的区别）
+
+    CSRF：是利用网站A本身的漏洞，去请求网站A的api。
+
+    XSS：是向网站 A 注入 JS代码，然后执行 JS 里的代码，篡改网站A的内容。
 
 ### 代码题
 
