--- a/source/_posts/面试题.md
+++ b/source/_posts/面试题.md
@@ -156,6 +156,13 @@ border-box content+padding+border
     }
     加到容器上,里面子元素浮动被清除.
 
+7. 重绘重排
+    1. 重绘：元素外观发生改变，如元素填充颜色
+    2. 重排：布局发生改变，需要重新生成布局，重新排列元素
+        减少重排 
+            i. 脱离文档流
+            ii. 避免频繁操作样式
+            iii. 减少重排范围，尽量将样式加载具体元素上，而不是它的父级 
 ###  JS
 
 1. ES6属性
@@ -603,10 +610,11 @@ border-box content+padding+border
 2. HTTP缓存有哪几种
     http1.1：
 
-    Cache-control: max-age 多少秒内过期 是相对时间 无请求 在本地
-    Etag:MD5 在服务器 有请求 304
-    http1.0：
-    Expire:日期 什么时候过期 Bug:本地时间用户可以调
+    Cache-control（强缓存）: max-age 多少秒内过期 是相对时间 无请求 在本地
+    Etag（协商缓存）:MD5 在服务器 有请求 304
+    http1.0：服务器最后修改时间，只能存到秒 有请求 304
+    Expire（强缓存）:日期 什么时候过期 Bug:本地时间用户可以调 无请求 在本地
+    Last-Modified（协商缓存）：
 
 3. GET 和 POST
 
@@ -885,11 +893,30 @@ axios.interceptors.response.ues(function(response){
                   
 ### 安全
 
-    XSS（跨站脚本攻击）
+    XSS-Cross-Site Scripting（跨站脚本攻击）
+        i. 反射型XSS 
+            防御：对url的查询参数进行转义后再输出到页面。  
+            ```bash
+            app.get('/welcome', function(req, res) {
+                //对查询参数进行编码，避免反射型 XSS攻击
+                res.send(`${encodeURIComponent(req.query.type)}`); 
+            });
+            ```
+        ii. DOM型XSS
+            防御： 对html进行转义
+            ```bash
+            function encodeHtml(str) {
+                return str.replace(/"/g, '&quot;')
+                        .replace(/'/g, '&apos;')
+                        .replace(/</g, '&lt;')
+                        .replace(/>/g, '&gt;');
+            }
+            ```
 
-
-    CSRF（跨站请求伪造）
-        防御：Token验证
+    CSRF-Cross-site request forgery（跨站请求伪造）
+        防御：
+            i. Token验证
+            ii.  Cookie添加SameSite属性，在跨站请求时不会被发送
 
     区别一：
 
@@ -960,7 +987,7 @@ var person1 = {
 var person2 = {name:'person2'}
 
 person1.show1() //person1
-person11.show1.call(person2) //person2
+person1.show1.call(person2) //person2
 
 person1.show2() // window 作用域是window,指向window
 person1.show2.call(person2) //window call不能改变箭头函数指向,作用域是window
